fix: js broken due to incorrect z-index

--- a/src/style.css
+++ b/src/style.css
@@ -62,16 +62,8 @@ body.js-no-scroll {
 body {
   background-color: var(--color-neutral-light);
   font-family: 'Rubik', sans-serif;
-  margin: 0 auto;
+  margin: 0;
   min-height: 100vh;
-  max-width: var(--max-width);
-}
-
-main,
-header {
-  position: relative;
-  background-color: white;
-  z-index: -1;
 }
 
 button,
@@ -119,6 +111,14 @@ svg {
 .top-lvl-section {
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
+}
+
+.outer-container {
+  background-color: white;
+  margin: 0 auto;
+  max-width: var(--max-width);
+  position: relative;
+  isolation: isolate;
 }
 
 /*------------------------------------*\
